added content to license.md file

--- a/projects/static/css/index.css
+++ b/projects/static/css/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(24, 39, 245);
+    background-color: cyan;
   }
   
   .image2>img{
